3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/map.c: Fix some bugs relating to map tiling.  MSW 2001-12-16

common/object.c random_maps/Makefile.in 
  server/c_wiz.c server/player.c server/plugins.c server/timers.c 
  socket/request.c: Most of the changes are to just fix compiling warnings
  or errors so that it compiles on sparc solaris with the workshop
  compiler (things like }; should just be }).  Declaration for alphasort
  was missing in plugins.c.  random_maps/Makefile.in had the wrong order in
  linking - the system library needs to be linked in after the crossfire
  libraries.
crossedit/App.c: Fix for running on 8 bit color - colormap was not being
  initialized to usuable default value.
crossedit/xutil.c: Broken code when duplicating faces for undefined
  images.  That code should never really be used, as pixmaps currently
  are always contiguous.
MSW 2001-12-15


Include mapstats cmd for extended clients (sdl iso). Cmd is needed for automaps
    ambient media infos, map name and map parameter infos. Paramter infos are used
    for "fire & forget" animation tags inside the map2 cmd (next patch).
server/main.c: include a automatic mapstats cmd every time the player enters a new map.
    Its the "default" mapenter cmd. The script event should used for special cases.
include/sockproto.h and socket/request.c: include the mapstats cmd function.               
MT 2001-12-03

This checkin for the most part removes support for xpm and xbm graphics - 
    now the only image supported is the png.
common/arch.c: comment out printing on warning of object having no type -
    getting 300 meaningless messages at startup is annoying.